Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53596

QML SignalTransition causes segfault with incorrect signal assignment

    XMLWordPrintable

Details

    Description

      The following code causes an instant crash:

      import QtQuick 2.0
      import QtQml.StateMachine 1.0
       
      Item {
        id: thingy
        signal somethingHappened
       
        StateMachine {
          initialState: stateA
          running: true
       
          State {
            id:stateA
            onEntered:console.log('entered A')
       
            SignalTransition {
              targetState: stateB
              # Note that this should say signal: thingy.somethingHappened
              signal: thingy.onSomethingHappened
            }
          }
       
          State {
            id: stateB
            onEntered: console.log('entered B')
          }
        }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-53596
        # Subject Branch Project Status CR V

        Activity

          People

            shausman Simon Hausmann
            louai Louai Al-Khanji
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes