Fix crash with SignalTransition

Don't crash when using SignalTransition with a signal object instead of the
slot used to emit the signal. A signal object is just as good.

Task-number: QTBUG-53596
Change-Id: I8a419d16ec0c257c9a798a83ee5bad338794cdd2
Reviewed-by: Michael Brasser <michael.brasser@live.com>